2005-03-22  Evgeniy Kozhuhovskiy  <e.kozhuhovskiy@gmail.com>

	* INSTALL.ru: added some information

2005-02-21  Evgeniy Kozhuhovskiy  <e.kozhuhovskiy@generation-p.com>

	* bforce/sess_answ.c (answ_system): fixed deiniting of tcpip port

2005-02-20  Evgeniy Kozhuhovskiy  <e.kozhuhovskiy@generation-p.com>

	* bforce/sess_answ.c (answ_system): fixed bug with loggin inbound
	tcpip sessions

	* bforce/logger.c (log_getfilename): fixed possible bug

2005-02-17  Evgeniy Kozhuhovskiy  <e.kozhuhovskiy@generation-p.com>

	* configure.in: fixed --with-owner and --with-group

2005-02-16  Evgeniy Kozhuhovskiy  <e.kozhuhovskiy@gmail.com>

	* bforce/prot_emsi.c (sm_rx_waitseq): fixed unexpected emsi
	sequence 

2005-02-13  Evgeniy Kozhuhovskiy <e.kozhuhovskiy@gmail.com>

	* bforce/sess_call.c (call_system_quiet): added run_before_session

2005-02-12  Evgeniy Kozhuhovskiy <e.kozhuhovskiy@gmail.com>

	* outman: added bso support

2005-02-10  Evgeniy Kozhuhovskiy <e.kozhuhovskiy@gmail.com>

	* bforce.conf: added nodelist mask examples

2005-02-09  Evgeniy Kozhuhovskiy  <e.kozhuhovskiy@gmail.com>

	* bforce/nodelist.c (nodelist_open): fixed stupid memory leak.

2005-01-16  Evgeniy Kozhuhovskiy  <e.kozhuhovskiy@gmail.com>

	* bforce/nodelist.c (nodelist_open): fixed mask detection
	* bforce/nodelist.c (nodelist_open): added tmpseekdir, contains
	full path to currently seeked nodelist

2005-01-12  Andrey Slusar  <anray@users.sourceforge.net>

	* Makefile.in (installdirs): fix compiling when use a bsd
	chown.

	* Makefile.in (bforce/expression.c): fix compiling when use
	a bsd make.

2005-01-12  Evgeniy Kozhuhovskiy  <e.kozhuhovskiy@generation-p.com>

	* bforce/nodelist.c (nodelist_open): rewritten logic

	* bforce/logger.c (log): fixed working with --enable-syslog

	* include/logger.h: fixed some warnings

2005-01-11  Evgeniy Kozhuhovskiy  <e.kozhuhovskiy@generation-p.com>

	* bforce/nodelist.c (nodelist_open): fixed warnings

2005-01-11  Andrey Slusar  <anray@users.sourceforge.net>
