@@ -1,3 +1,7 @@
+2005-03-26  ugenk  <e.kozhuhovskiy@generation-p.com>
+
+	* bforce/nodelist.c (nodelist_open): fixed compilation with gcc-2.95
+
 2005-03-22  Evgeniy Kozhuhovskiy  <e.kozhuhovskiy@gmail.com>
 
 	* INSTALL.ru: added some information
